Mapper gradering (#3885)
* Legger til og mapper nye graderingsfelter

* Mapper til domeneobjekt før mapping til kontrakt

* Fjerner felt for gradering på andelsnivå

* Håndterer divideByZero og reduserer scale